adding filler messages and the frontend part
